@@ -25,7 +25,7 @@
 #include "synthv1.h"
 
 #include "lv2.h"
-#include "lv2/lv2plug.in/ns/ext/event/event.h"
+#include "lv2/lv2plug.in/ns/ext/atom/atom.h"
 
 #define SYNTHV1_LV2_URI "http://synthv1.sourceforge.net/lv2"
 #define SYNTHV1_LV2_PREFIX SYNTHV1_LV2_URI "#"
@@ -62,9 +62,9 @@ public:
 
 private:
 
-	uint32_t m_event_id;
+	uint32_t m_midi_event_type;
 
-	LV2_Event_Buffer *m_event_buffer;
+	LV2_Atom_Sequence *m_atom_sequence;
 
 	float **m_ins;
 	float **m_outs;
